# ChatKit_Meeting_Scheduler_AI

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/app/: database.py  server.py  types.py
backend/app/agents/: scheduler.py  tools.py
backend/app/store/: app_store.py  chat_store.py
backend/app/widgets/: builders.py
backend/app/widgets/templates/: contact_picker.widget  invite_editor.widget  meeting_confirmed.widget  time_picker.widget
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/components/: ChatKitPanel.tsx  ChatPageSwitchUser.tsx  ResizableLayout.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/lib/: config.ts
